--- a/soil-organic/src/index.css
+++ b/soil-organic/src/index.css
@@ -19,7 +19,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color:azure; */
-  color: white;
+  /* color: white; */
   
   
   
