--- a/soil-organic/src/styling/header.css
+++ b/soil-organic/src/styling/header.css
@@ -6,7 +6,7 @@
 }
 
 .parent-container{
-        
+        color:white;
         background-image: url('../images/header-background.jpg');
         height: 100vh;
         opacity: 0.97;
