--- a/soil-organic/src/styling/header.css
+++ b/soil-organic/src/styling/header.css
@@ -10,7 +10,7 @@
         background-image: url('../images/header-background.jpg');
         height: 100vh;
         opacity: 0.97;
-        width: 100vw;
+        width: 100%;
         
 }
 
